# feed621

./: .env  .gitignore  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml
crates/: README.md
crates/paging/: Cargo.toml  README.md
crates/paging/src/: lib.rs
docker/: README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml
scripts/: podman_socket.sh  set_database_url.sh  start.sh
services/backend/: .dockerignore  .env  Cargo.toml  Dockerfile  Dockerfile.dev  README.md
services/backend/confgen/: Cargo.toml
services/backend/confgen/src/: lib.rs
services/backend/domain/: Cargo.toml
services/backend/domain/src/: app_error.rs  lib.rs  page.rs
services/backend/domain/src/subscriptions/: mod.rs  repository.rs  service.rs
services/backend/domain/src/subscriptions/models/: dtos.rs  entities.rs  schemas.rs
services/backend/domain/src/topics/: repository.rs  service.rs
services/backend/domain/src/topics/models/: dtos.rs  entities.rs  mod.rs  schemas.rs
services/backend/domain/src/users/: mod.rs  repository.rs  service.rs
services/backend/domain/src/users/models/: dtos.rs  entities.rs  schemas.rs
services/backend/domain/src/utils/: jwt_manager.rs  mod.rs  password_manager.rs
services/backend/infrastructure/: Cargo.toml
services/backend/infrastructure/.sqlx/: query-5414acf2dc393704ed9bc6d2610861b66407b3ca7aee41ca3b12b88d8d49560a.json  query-8a7d20ffb0764e66aea3e6dc08a756cdd78b4ea8e557685c274bcc2b0e32b5fe.json  query-f3c88bde003cf1d9348672b66bac93a333643397ecd4bc356d8ef06bd0e4bda2.json
services/backend/infrastructure/src/: lib.rs
services/backend/infrastructure/src/repositories/: mod.rs  test_utils.rs  user_repository.rs
services/backend/infrastructure/src/utils/: jwt_manager.rs  mod.rs  password_manager.rs
services/backend/src/: app.rs  config.rs  domain.rs  error.rs  error_response.rs  main.rs  response.rs
services/backend/src/axum/: mod.rs  routes.rs
services/backend/src/axum/routes/: openapi.rs  users.rs
services/backend/src/database/: mod.rs
services/backend/src/models/: mod.rs  subscription_models.rs  topic_models.rs  user_models.rs
services/backend/src/routes/: mod.rs  openapi.rs  subscription_routes.rs  subscriptions_routes.rs  test_routes.rs  topic_routes.rs  user_routes.rs  users_routes.rs
services/database/: Dockerfile  README.md
services/database/migrations/: 20240625074251_init.up.sql  20240625133649_remove_auto_id.down.sql  20240625133649_remove_auto_id.up.sql  20240625170341_add_topic_name.down.sql  20240625170341_add_topic_name.up.sql  20240626190514_add_topic_owner.down.sql  20240626190514_add_topic_owner.up.sql  20240703194402_init.down.sql  20240703194402_init.up.sql
services/migrations/: Dockerfile  README.md
services/migrations/migrations/: 20240810074147_init.down.sql  20240810074147_init.up.sql
services/nginx/: README.md  default.conf
