[package]
name = "backend"
version = "1.0.0"
edition = "2021"

[dependencies]
confgen = { path="./confgen" }

dotenvy = "0.15.7"
axum = "0.7.5"
tokio = { version="1.38.0", features = ["macros", "rt-multi-thread"] }
utoipa = { version = "5.0.0-alpha.0", features = ["axum_extras"] }
utoipa-scalar = { version = "0.2.0-alpha.0", features = ["axum"] }

async-trait = "0.1.80"
serde_json = "1.0"
serde = { version="1.0.200", features=["derive"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-rustls", "postgres"] }
